<resources>
    <string name="app_name">Tax Resident</string>
    <string name="text_hello">Приветствуем,</string>
    <string name="title_record">Запись</string>
    <string name="title_settings">Настройки</string>
    <string name="title_user_name">Имя пользователя</string>
    <string name="title_about">О приложении</string>

    <string name="menuItem_settings">Настройки</string>
    <string name="menuItem_about">О приложении</string>
    <string name="menuItem_photo_fromGallery">Взять фото из галереи</string>
    <string name="menuItem_new_photo">Сделать новое фото</string>

    <string name="tooltip_search">Поиск</string>
    <string name="tooltip_more">Больше</string>
    <string name="tooltip_delete">Удалить</string>

    <string name="text_used">Использовано:</string>
    <string name="text_left">Осталось:</string>
    <string name="text_days">дней</string>
    <string name="text_dates_crossing">Указанный период пересекается с уже записанным ранее:</string>
    <string name="text_specify_arr_date">Необходимо указать дату возвращения!</string>
    <string name="text_date_in_future">Вы указываете дату в будущем!</string>
    <string name="textSwitch_style">Включить темную тему</string>
    <string name="text_dark_theme">Темная тема включена</string>
    <string name="text_light_theme">По умолчанию светлая тема</string>
    <string name="text_emptyList_first">Пока не создано ни одной записи</string>
    <string name="text_emptyList_search">Ничего по заданному запросу не найдено</string>

    <string name="label_dep_date">Дата отъезда</string>
    <string name="label_arr_date">Дата возвращения</string>
    <string name="label_comment">Комментарий</string>
    <string name="label_input_name">Введите имя</string>

    <string name="placeholder_search">Поиск по комментарию</string>

    <string name="supportText_correct_dep_date">Введите корректную дату отъезда!</string>
    <string name="supportText_correct_arr_date">Введите корректную дату возвращения!</string>

    <string name="btn_create">Создать</string>
    <string name="btn_edit">Изменить</string>
    <string name="btn_confirm">Применить</string>
    <string name="btn_dismiss">Отмена</string>

</resources>