...
        .replace("{background}", backgroundColor)
        .replace("{color}", textColor)
        .replace("{linkColor}", linkColor)

    AndroidView(
        modifier = Modifier
            .testTag("WebView")
            .fillMaxSize()
            .padding(
                top = topPadding,
                start = 0.dp,
                end = 0.dp,
                bottom = 0.dp
...
