...
            ) {
                Text(
                    text = stringResource(R.string.textSwitch_style),
                    style = MaterialTheme.typography.bodyLarge
                )
                Switch(
                    modifier = Modifier.testTag("переключатель темы"),
                    checked = darkTheme,
                    onCheckedChange = callbacks.onSwitchTheme,
                    colors = SwitchDefaults.colors(uncheckedBorderColor = MaterialTheme.colorScheme.surfaceVariant)
                )
            }
            Spacer(
...
